<resources>
    <string name="app_name">Alarm Manager</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Tanggal Alarm</string>
    <string name="alarm_time">Waktu Alarm</string>
    <string name="alarm_message">Pesan Alarm</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_repeating_alarm">Cancel Repeating Alarm</string>
    <string name="once_time_button">Once Time Button</string>
    <string name="once_date_button">Once Date Button</string>
    <string name="repeating_time_button">Repeating Time Button</string>
</resources>
