<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_top"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        style="@style/CardStyle"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvOnce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/one_time_alarm"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_once_date"
                style="@style/ImageButtonStyle"
                android:contentDescription="@string/once_date_button"
                android:src="@drawable/ic_date_range_black_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOnce" />

            <TextView
                android:id="@+id/tv_once_date"
                style="@style/TextViewStyle"
                android:text="@string/alarm_date"
                app:layout_constraintBottom_toBottomOf="@id/btn_once_date"
                app:layout_constraintLeft_toRightOf="@id/btn_once_date"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_once_date" />

            <ImageButton
                android:id="@+id/btn_once_time"
                style="@style/ImageButtonStyle"
                android:contentDescription="@string/once_time_button"
                android:src="@drawable/ic_access_time_black_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_once_date" />

            <TextView
                android:id="@+id/tv_once_time"
                style="@style/TextViewStyle"
                android:text="@string/alarm_time"
                app:layout_constraintBottom_toBottomOf="@id/btn_once_time"
                app:layout_constraintLeft_toRightOf="@id/btn_once_time"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_once_time" />

            <EditText
                android:id="@+id/edt_once_message"
                style="@style/EditTextStyle"
                android:hint="@string/alarm_message"
                android:importantForAutofill="no"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_once_time" />

            <Button
                android:id="@+id/btn_set_once_alarm"
                style="@style/ButtonStyle"
                android:text="@string/set_one_time_alarm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_once_message" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/CardStyle"
        app:layout_constraintTop_toBottomOf="@id/cardView1"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvRepeating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/repeating_alarm"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/btn_repeating_time"
                style="@style/ImageButtonStyle"
                android:contentDescription="@string/repeating_time_button"
                android:src="@drawable/ic_access_time_black_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRepeating" />

            <TextView
                android:id="@+id/tv_repeating_time"
                style="@style/TextViewStyle"
                android:text="@string/alarm_time"
                app:layout_constraintBottom_toBottomOf="@id/btn_repeating_time"
                app:layout_constraintLeft_toRightOf="@id/btn_repeating_time"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_repeating_time" />

            <EditText
                android:id="@+id/edt_repeating_message"
                style="@style/EditTextStyle"
                android:hint="@string/alarm_message"
                android:importantForAutofill="no"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_repeating_time" />

            <Button
                android:id="@+id/btn_set_repeating_alarm"
                style="@style/ButtonStyle"
                android:text="@string/set_repeating_alarm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_repeating_message" />

            <Button
                android:id="@+id/btn_cancel_repeating_alarm"
                style="@style/ButtonStyle"
                android:text="@string/cancel_repeating_alarm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_set_repeating_alarm" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>